--- a/src/Components/Auth/Auth.css
+++ b/src/Components/Auth/Auth.css
@@ -71,3 +71,16 @@
     justify-content: space-around;
     width: 55%;
   }
+  
+  @media (max-width: 760px) {
+    .auth-container {
+      box-shadow: none;
+      background-image: none;
+    }
+    .auth-button-container{
+      border: blask solid 1px;
+      width: 60vw;
+      display: flex;
+      justify-content: space-between;
+    }
+  }
